@@ -2,6 +2,6 @@ AUX m2_classworlds.conf 145 RMD160 018b5aa7f6a11451304c2e13be1eb986afa5ca84 SHA1
 AUX maven-2.0.pom 276 RMD160 324e76ddff03a6914038bb941a72513f1fa3045b SHA1 3eff2f8808b44723886fe9c30e53f85a77227d47 SHA256 5f7a9cb44a9512c5237fb75e126c7c304c96cee304dfda31031fc4661c395bf6
 AUX mvn 1607 RMD160 d0ffffe80da3aeaff9d22f6b3c40f1a31b365288 SHA1 3f6789299a60866458baeca68d16c6f5a9033ad4 SHA256 d2bd49f9a8f73a0f2679d060fc0cb797168185ec61a3412b302bde8fb17581ac
 AUX settings.xml 553 RMD160 d50c4e1ff7b199b298d578c18ed479cc3e0b915e SHA1 95d35d36fd90d4c499d0dc564e343404b1ff0bf1 SHA256 c8d431a0e01b4c9fae20fb0ca44cd4548c0f4bd2cf5c48d093a91b93747e05a2
-EBUILD maven-2.0.ebuild 3243 RMD160 5fb7428a7bf54063b58eeffbea5f22b15e6244b5 SHA1 c57da112ce7bc9cc34e557113796130b5880411a SHA256 78e41bf09a568d1bdf20fcfeb1d9c77e4d0934112bd4f90200fd7af72476ed07
-MISC ChangeLog 1087 RMD160 7b090476d4c669c13489adaa263ace1341328ffb SHA1 5b70d245287219ceb605c445ff3c5741944f249e SHA256 b64e939b8718a779349183b2b88436586cf1361b2843b894e6cd6aaa97e875c2
+EBUILD maven-2.0.ebuild 3347 RMD160 f116db3c6e8145f7c77136fbef2ba71b0fa725e6 SHA1 ce554e21662d0c2a17564e51737406cd1aba5f43 SHA256 530b86f048e7133ec4e28bada38095772f5c11e9fcaca59411c23ad55ed4df1e
+MISC ChangeLog 1200 RMD160 cc1f1cca4a2f04a0ce36e98b77e95ea0e13e0a5b SHA1 a134219710f70de75e8c4ea6d88816835ec54d78 SHA256 74dd9e86b8409a6c59371083e69a726cf58cc8bb43c382087940d6535ab89459
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
