@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Jun 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
+  adding a dep for plugins / correcting DEPENDS
+
   02 Jun 2007; kiorky <kiorky@cryptelium.net> maven-2.0.ebuild:
   moving to JAVA_MAVEN_CLASSPATH / correct DEPENDS
 
